[project]
name = "rayrun"
version = "0.1.0"
description = "Jupyter widget for on-demand GPU/CPU compute using RunPod and Ray"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "rambip"}
]
keywords = ["jupyter", "widget", "gpu", "ray", "runpod", "distributed-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anywidget>=0.9.0",
    "ray[default]>=2.9.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "traitlets>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/rambip/rayrun"
Repository = "https://github.com/rambip/rayrun"
Issues = "https://github.com/rambip/rayrun/issues"

[dependency-groups]
dev = [
    "marimo>=0.19.11",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rayrun"]
